[gd_scene load_steps=6 format=3 uid="uid://yi1e3grs54lg"]

[ext_resource type="Script" path="res://Scenes/PlayerUI/player_ui.gd" id="1_864et"]
[ext_resource type="PackedScene" uid="uid://cohuy6jfyif47" path="res://Scenes/PlayerUI/player_panel.tscn" id="1_r7qr2"]

[sub_resource type="Animation" id="Animation_dm2f3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TopLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TopRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BottomRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(512, 328)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/BottomLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 328)]
}

[sub_resource type="Animation" id="Animation_7wf2q"]
resource_name = "fade"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TopLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(-128, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TopRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(512, 0), Vector2(640, -32)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BottomRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(512, 328), Vector2(640, 320)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/BottomLeft:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 328), Vector2(-128, 320)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1by1n"]
_data = {
"RESET": SubResource("Animation_dm2f3"),
"fade": SubResource("Animation_7wf2q")
}

[node name="PlayerUI" type="CanvasLayer"]
script = ExtResource("1_864et")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_1by1n")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="BottomLeft" parent="Control" instance=ExtResource("1_r7qr2")]
unique_name_in_owner = true
layout_mode = 1
anchor_top = 0.911111
anchor_bottom = 1.0
offset_bottom = 0.0
grow_vertical = 0

[node name="BottomRight" parent="Control" instance=ExtResource("1_r7qr2")]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.8
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0125
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0
flip = true

[node name="TopRight" parent="Control" instance=ExtResource("1_r7qr2")]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.8
anchor_right = 1.0
offset_bottom = 0.0
grow_horizontal = 0
flip = true

[node name="TopLeft" parent="Control" instance=ExtResource("1_r7qr2")]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = 0.0
